# fileCompressor

./: .gitignore  CMakeLists.txt  README.md
src/: file_proc.cpp  file_proc.hpp  main.cpp  task_queue.cpp  task_queue.hpp
